--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,18 +2,18 @@
     <!-- BARRA COMPARTILHADA -->
     <%- include('./partials/barra') %>
 
-      <!-- CONTEUDO GERAL HOME-->
+        <!-- CONTEUDO GERAL HOME-->
         <div class="row" id="welcome">
-            
-              <!-- COLUNA 1 -->
+
+            <!-- COLUNA 1 -->
             <div class="col">
 
             </div>
 
-              <!-- COLUNA 2-->
+            <!-- COLUNA 2-->
             <div class="col">
-                
-            
+
+
                 <a href="#contato">
                     <button type="button" class="btn btn-primary btn-lg" id="btnInicial">Contate-me</button>
                 </a>
@@ -24,27 +24,31 @@
         </div>
 
 
-          <!-- SCRIPT -->
+        <!-- SCRIPT -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous">
-        </script>
+            </script>
 
 </section>
 
 
-  <!-- SEÇÃO SOBRE -->
+<!-- SEÇÃO SOBRE -->
 <section id="sobre">
 
     <div class="contSobre">
         <h1>SOBRE <span class="formatText">MIM</span> </h1>
         <p id="pSobre">
-            Meu nome é Fernando, e sou um profissional com uma trajetória diversificada e sólida em diferentes áreas, 
-            incluindo Administração de Empresas, Contabilidade e Análise e Desenvolvimento de Sistemas. Com uma Pós-Graduação 
-            em Gestão Financeira Avançada, adquiri uma base sólida em finanças e acumulei mais de 10 anos de experiência na área.
+            Meu nome é Fernando, e sou um profissional com uma trajetória diversificada e sólida em diferentes áreas,
+            incluindo Administração de Empresas, Contabilidade e Análise e Desenvolvimento de Sistemas. Com uma
+            Pós-Graduação
+            em Gestão Financeira Avançada, adquiri uma base sólida em finanças e acumulei mais de 10 anos de experiência
+            na área.
 
-            Durante minha carreira na área financeira, tive a oportunidade de trabalhar em diversas empresas. Ao longo desses anos, 
-            desenvolvi habilidades analíticas, tomada de decisões estratégicas 
-            e gestão de recursos financeiros. No entanto, sempre senti uma paixão crescente pela tecnologia e pela programação.
+            Durante minha carreira na área financeira, tive a oportunidade de trabalhar em diversas empresas. Ao longo
+            desses anos,
+            desenvolvi habilidades analíticas, tomada de decisões estratégicas
+            e gestão de recursos financeiros. No entanto, sempre senti uma paixão crescente pela tecnologia e pela
+            programação.
         </p>
 
     </div>
@@ -52,33 +56,61 @@
 </section>
 
 <section id="trabalho">
-    <h1><span class="formatText">MEU</span> TRABALHO</h1>
+    <h1 id="txtTrab"><span class="formatText">MEU</span> TRABALHO</h1>
     <div class="colTrab1">
-        <h2>FOTO</h2>
 
-        <h3>Veja mais em:</h3>
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="/img/Capa.png" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="/img/historia.png" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="/img/lua.png" class="d-block w-100" alt="...">
+              </div>
+            </div>
+            <a class="carousel-control-prev" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+          
 
-        <h4>https://github.com/fernando10092</h4>
+
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+
+
 
     </div>
 
     <div class="colTrab2">
-        <h2>
-            Site de Casamento
-        </h2>
-        <p id="pTrab">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis optio porro et qui, 
-            rerum provident quae quasi quam accusantium saepe cum culpa id error quibusdam facere? 
-            Veniam repudiandae impedit totam?
-        </p>
+       
+        <h3>Veja mais em:</h3>
+
+        <a id="aTextTrab" href="https://github.com/fernando10092"><h4>https://github.com/fernando10092 <br><img class="iconControl" src="/icon/github.svg"></h4></a>
         
+
+
     </div>
 
 </section>
 
 <section id="contato">
 
-    <h1>CONTATO</h1>
+    <h1>CONT<span class="formatText">ATO</span> </h1>
 
     <div class="formulario">
 
@@ -104,50 +136,33 @@
                 <textarea name="msg" class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
             </div>
 
-            <button type="submit" class="btn btn-primary">Enviar</button>
+            <button id="btnSendMsg" type="submit" class="btn btn-primary">Enviar</button>
 
 
 
         </form>
 
-        <br>
-        <table>
-
-            <thead>
-                <tr>
-                    <th scope="col">id</th>
-                    <th scope="col">Nome</th>
-                    <th scope="col">email</th>
-                </tr>
-            </thead>
-
-            <tbody>
-
-
-                <tr>
-
-                    <th scope="row"> </th>
-                    <th></th>
-
-                </tr>
-
-
-
-            </tbody>
-
-
-
-        </table>
+       
 
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous">
-    </script>
+        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous">
+        </script>
 
-<div id="infoContact">
-   <h3>fernando100@windowslive.com</h3
-   <h3>(11) 99537-0943</h3>
-</div>
+    <div id="infoContact">
+        <h3>E-mail: fernando100@windowslive.com</h3>
+        <h3>Cel: (11) 99537-0943</h3>
+
+     
+            <a href="https://br.linkedin.com/in/fernandolimagomes92">
+                Linkedin: https://br.linkedin.com/in/fernandolimagomes92
+                <br><img class="iconControl" src="/icon/linkedin.svg">
+            </a>
+     
+
+        
+
+    </div>
 
 </section>
