Versão com API de Email em 29/11/2023

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -114,7 +114,7 @@
 
     <div class="formulario">
 
-        <form action="" method="POST">
+        <form action="/contato" method="POST">
 
 
             <div class="mb-3">
