--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,6 +3,7 @@
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
+
 /*BARRA*/
 
 #barra {
@@ -174,3 +175,24 @@ div a:hover {
     width: 35px;
     height: 35px;
 }
+
+/* Estilos para dispositivos com largura menor que 768 pixels */
+@media screen and (max-width: 768px) {
+    #btnInicial {
+        margin-top: 400px;
+        margin-right: 50px;
+        width: 60%;
+        height: 10%;
+        float: left;
+        background-color: rgba(110, 203, 239, 0.4);
+        
+    }
+
+
+    #barra {
+        display: none;
+        background-image: url("/img/menu.png");
+        background-color: red;
+    }
+
+  }
