--- a/views/partials/barra.ejs
+++ b/views/partials/barra.ejs
@@ -2,6 +2,21 @@
 <html lang="en">
 
 <head>
+
+    <!--GOOGLE ANALYTICS-->
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-8ENH54SNVR"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-8ENH54SNVR');
+    </script>
+    <!--GOOGLE ANALYTICS-->
+    <!-- Google tag (gtag.js) -->
+
+
     <link rel="stylesheet" type="text/css" href="/css/style.css" />
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,8 +24,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+
+    <!--POPTIN-->
+    <script id='pixel-script-poptin' src='https://cdn.popt.in/pixel.js?id=b506a1cf7ea0e' async='true'></script>
+    <!--POPTI -->
 </head>
-    <title>Fernando de Lima</title>
+
+
+<title>Fernando de Lima</title>
 </head>
 
 <body>
@@ -20,7 +41,7 @@
         <div class="logo">
 
             <h1 class="nameLogo">
-               < FLG >
+                < FLG>
             </h1>
 
         </div>
@@ -33,3 +54,29 @@
         </div>
 
     </div>
+
+
+    <!--TAWK TO-->
+    <!--Start of Tawk.to Script-->
+    <script type="text/javascript">
+        var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
+        (function () {
+            var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
+            s1.async = true;
+            s1.src = 'https://embed.tawk.to/65e26b749131ed19d973cc12/1hnu77g1n';
+            s1.charset = 'UTF-8';
+            s1.setAttribute('crossorigin', '*');
+            s0.parentNode.insertBefore(s1, s0);
+        })();
+    </script>
+    <!--End of Tawk.to Script-->
+
+    <!--TAWK TO-->
+
+
+
+
+
+</body>
+
+</html>
