atualização SEM  analytics e tawuk em 10/03/2024

--- a/views/partials/barra.ejs
+++ b/views/partials/barra.ejs
@@ -26,13 +26,14 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 
     <!--POPTIN-->
-    <script id='pixel-script-poptin' src='https://cdn.popt.in/pixel.js?id=b506a1cf7ea0e' async='true'></script>
+    <!-- <script id='pixel-script-poptin' src='https://cdn.popt.in/pixel.js?id=b506a1cf7ea0e' async='true'></script> -->
     <!--POPTI -->
 </head>
 
 
 <title>Fernando de Lima</title>
 </head>
+
 
 <body>
 
@@ -58,7 +59,7 @@
 
     <!--TAWK TO-->
     <!--Start of Tawk.to Script-->
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
         var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
         (function () {
             var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
@@ -68,7 +69,7 @@
             s1.setAttribute('crossorigin', '*');
             s0.parentNode.insertBefore(s1, s0);
         })();
-    </script>
+    </script> -->
     <!--End of Tawk.to Script-->
 
     <!--TAWK TO-->
